# multi_robots_task_allocation

./: README.md  notes (copy).txt  notes.txt  setup.sh
include/: arm_gripper_manipulation.mkv
include/Algorithm_scheduling/: scheduling_idea.drawio  scheduling_step_2.drawio  scheduling_step_4.drawio  scheduling_step_6.drawio  scheduling_step_8.drawio
include/Image/: MRTA_planning.drawio  ROS_principle.drawio  Use_Case_Configuration.drawio  Use_case_configuration_simplified.drawio  Use_case_path.drawio
ressources/Algorithm_scheduling/: scheduling_step_1.drawio  scheduling_step_3.drawio  scheduling_step_5.drawio  scheduling_step_7.drawio
ressources/Image/: Products_process.drawio  scheduling.drawio
src/mrta/: CMakeLists.txt  package.xml
src/mrta/msg/: Mission.msg
src/mrta/scripts/: MRTA_algorithm.py  robot_mission_publisher.py  sequencer.py
src/robots/manipulator/common-sensors-master/: README.md
src/robots/manipulator/manipulator/manipulator/: CMakeLists.txt  package.xml
src/robots/manipulator/manipulator/manipulator_description/: CMakeLists.txt  package.xml
src/robots/manipulator/manipulator/manipulator_gazebo/: CMakeLists.txt  package.xml
src/robots/manipulator/manipulator/manipulator_moveit_config/: CMakeLists.txt  package.xml
src/robots/manipulator/manipulator/multi_manipulators/: CMakeLists.txt  package.xml
src/robots/manipulator/manipulator/multi_manipulators/launch/: indivi_manipulator.launch  indivi_manipulator_gazebo.launch  indivi_manipulator_planning_execution.launch  moveit_rviz_robot.launch
src/robots/manipulator/manipulator/multi_manipulators/rviz/: indivi_robot0_moveit.rviz  indivi_robot1_moveit.rviz  indivi_robot2_moveit.rviz  indivi_robot3_moveit.rviz  indivi_robot4_moveit.rviz  indivi_robot_moveit.rviz
src/robots/manipulator/manipulator/roboticsgroup_gazebo_plugins/: CMakeLists.txt  package.xml
src/robots/manipulator/manipulator/roboticsgroup_gazebo_plugins/src/: mimic_joint_plugin.cpp
src/robots/mir_robot/mir_robot/mir_description/: CMakeLists.txt  package.xml
src/robots/mir_robot/mir_robot/mir_gazebo/: CMakeLists.txt  package.xml
src/robots/mir_robot/mir_robot/mir_gazebo/config/: ekf.yaml
src/robots/mir_robot/mir_robot/mir_navigation/: CMakeLists.txt  package.xml
src/robots/mir_robot/mir_robot/mir_robot/: package.xml
src/robots/mir_robot/mir_robot/mir_slam/: CMakeLists.txt  package.xml
src/robots/mir_robot/mir_robot/multi_mirs/: CMakeLists.txt  package.xml
src/robots/mir_robot/mir_robot/multi_mirs/launch/: indivi_mir.launch  indivi_mir_gazebo.launch  indivi_mir_navigation.launch
src/robots/mir_robot/mir_robot/multi_mirs/rviz/: indivi_robot0_navigation.rviz  indivi_robot10_navigation.rviz  indivi_robot1_navigation.rviz  indivi_robot2_navigation.rviz  indivi_robot3_navigation.rviz  indivi_robot4_navigation.rviz  indivi_robot5_navigation.rviz  indivi_robot6_navigation.rviz  indivi_robot7_navigation.rviz  indivi_robot8_navigation.rviz  indivi_robot9_navigation.rviz  indivi_robot_navigation.rviz  multi_mirs_navigation.rviz
src/robots/mm_robot/mm_description/: package.xml
src/robots/mm_robot/mm_description/config/: mm_controller.yaml
src/robots/mm_robot/mm_description/launch/: mm_upload.launch
src/robots/mm_robot/mm_description/urdf/: mm_for_multi_mms.urdf.xacro  mm_for_only_mm.urdf.xacro  mm_support.urdf.xacro
src/robots/mm_robot/mm_gazebo/: CMakeLists.txt  package.xml
src/robots/mm_robot/mm_gazebo/config/: ekf.yaml
src/robots/mm_robot/mm_gazebo/launch/: mm_empty_world.launch  mm_gazebo.launch  mm_usecase_simplified_world.launch  mm_usecase_world.launch
src/robots/mm_robot/mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robots/mm_robot/mm_moveit_config/config/: joint_names.yaml  mm.srdf  ompl_planning.yaml
src/robots/mm_robot/mm_moveit_config/launch/: mm_moveit_controller_manager.launch.xml  mm_planning_execution.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/robots/mm_robot/mm_moveit_config/rviz/: moveit.rviz
src/robots/mm_robot/mm_navigation/: CMakeLists.txt  package.xml
src/robots/mm_robot/mm_navigation/launch/: mm_amcl.launch  mm_move_base.launch  mm_navigation_usecase_world.launch
src/robots/mm_robot/mm_navigation/rviz/: mm_navigation.rviz
src/robots/mm_robot/mm_robot/: CMakeLists.txt  package.xml
src/robots/mm_robot/multi_mms/: CMakeLists.txt  package.xml
src/robots/mm_robot/multi_mms/launch/: indivi_mm.launch  indivi_mm_gazebo.launch  indivi_mm_navigation.launch  indivi_mm_planning_execution.launch  moveit_rviz_robot.launch
src/robots/mm_robot/multi_mms/rviz/: indivi_robot0_moveit_navigation.rviz  indivi_robot10_moveit_navigation.rviz  indivi_robot1_moveit_navigation.rviz  indivi_robot2_moveit_navigation.rviz  indivi_robot3_moveit_navigation.rviz  indivi_robot4_moveit_navigation.rviz  indivi_robot5_moveit_navigation.rviz  indivi_robot6_moveit_navigation.rviz  indivi_robot7_moveit_navigation.rviz  indivi_robot8_moveit_navigation.rviz  indivi_robot9_moveit_navigation.rviz  indivi_robot_moveit_navigation.rviz
src/usecase_gazebo/: CMakeLists.txt  package.xml
src/usecase_gazebo/launch/: usecase_simplified_world.launch  usecase_simplified_world_for_multi_mirs.launch  usecase_simplified_world_for_multi_mms.launch  usecase_world.launch  usecase_world_for_multi_mirs.launch  usecase_world_for_multi_mms.launch
src/usecase_gazebo/maps/: map.yaml
src/usecase_gazebo/models/component/: model.config  model.sdf
src/usecase_gazebo/models/meshes/AP/: AP.FCStd  AP_simplified.FCStd  AP_simplified.stl
src/usecase_gazebo/models/meshes/MP/: MP.FCStd  MP.stl  MP_simplified.FCStd  MP_simplified.stl
src/usecase_gazebo/models/meshes/wall/: wall.FCStd  wall.stl
src/usecase_gazebo/models/usecase/: model.config  model.sdf
src/usecase_gazebo/models/usecase_simplified/: model.config  model.sdf
src/usecase_gazebo/scripts/: component_insertion.py
src/usecase_gazebo/worlds/: usecase.world  usecase_simplified.world
(+57 files in other folders)
