<?xml version="1.0"?>
<package format="2">
    <name>multi_mirs</name>
    <version>0.0.0</version>
    <description>The multi_mirs package</description>

    <maintainer email="vuhoi.huynh@gmail.com">Vu Hoi HUYNH</maintainer>
    <author email="vuhoi.huynh@gmail.com">Vu Hoi HUYNH</author>

    <license>TODO</license>

    <url type="website">https://github.com/huynhvuh/multi_robots_task_allocation</url>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
